--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <div class="box center">
   <h3>❤️ Support This Project</h3>
   <p>If this generator helped you, consider supporting its development.</p>
-  <a href="https://www.buymeacoffee.com/AaravDEV" target="_blank">
+  <a href="https://www.buymeacoffee.com/aaravdev" target="_blank">
     <button>Donate</button>
   </a>
 </div>
